Nova era de thema.

--- a/src/templates/archive.html
+++ b/src/templates/archive.html
@@ -1,2 +1,13 @@
-Here you can find all my previous posts:
-$partial("templates/post-list.html")$
+<div class="top-strip"></div>
+<div class="content">
+<main class="container">
+    <div class="row-fluid">
+            <section class="content">
+            <h1>Páginas de Lemol-C</h1>
+            </section>
+            $partial("templates/post-list.html")$
+    </div>
+    <hr>
+</main>
+</div>
+
