--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -1,97 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-          content="Haskell, processamento digital de sinais, desenvolvimento de software, etc. Um blog que pretende apresentar algumas
-	           páginas de Lemol-C.">
-    <meta name="author" content="Leza Morais Lutonda, Lemol, Lemol-C">
-    <meta name="reywords" content="Leza Morais Lutonda, Lemol, Lemol-C, Haskell, C#, Telecomunicações, Desenvolvimento de software, nodejs">
-    <link rel="icon" href="/assets/ico/favicon.ico">
+	<head>
+		<meta charset="utf-8"/>
+                <title>$title$ - Páginas de Lemol-C</title>
+		<!-- For responsive site
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		-->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<link rel="author" href="/humans.txt">
+		<meta name="description" content="Description Goes Here">
+		<link rel="stylesheet" href="/css/style.css">
+		<!--[if IE 7]>
+			<html class="ie7"> 
+			<link rel="stylesheet" type="text/css" href="/css/font-awesome-ie7.min.css">
+		<![endif]-->
+		<!--[if IE 8]><html class="ie8"> <![endif]-->		
+	    <!--[if lt IE 9]>
+	      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	    <![endif]-->
 
-    <title>$title$ - Páginas de Lemol-C</title>
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+		<link rel="shortcut icon" href="ico/favicon.png">	    
+	</head>
+	<body>
+	<!-- Header
+	    ================================================== -->
+	<header>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+	</header>
 
-    <!-- Custom styles for this template -->
-    <link href="/css/blog.css" rel="stylesheet">
+	$body$
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+	<footer>
+        <div class="container">
+            <a href="/about.html">sobre mim</a> | 
+                   (c) 2015 <a href="http://lemol.github.io/">Lemol-C</a> | Blog gerado por <a href="http://jaspervdj.be/hakyll">Hakyll</a> | Tema de <a hre="http://richbray.me/frap/">Frappuccino</a>
+		</div>
+	</footer>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+	<!-- Footer
+	    ================================================== -->
 
-  <body>
+	<!-- Javascripts 
+	    ================================================= -->
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/custom.js"></script>
 
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item active" href="/index.html">Inicio</a>
-          <a class="blog-nav-item" href="/about.html">Sobre mim</a>
-        </nav>
-      </div>
-    </div>
-
-    <div class="container">
-
-      <div class="blog-header">
-        <h1 class="blog-title">Lemol-C's Pages</h1>
-        <p class="lead blog-description">Software dev, Telecomunicações, Electrónica, Matemática, etc.</p>
-      </div>
-
-      <div class="row">
-
-        <div class="col-sm-8 blog-main">
-		$body$
-        </div><!-- /.blog-main -->
-
-        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
-          <!--<div class="sidebar-module sidebar-module-inset">-->
-            <!--<h4>About</h4>-->
-            <!--<p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>-->
-          <!--</div>-->
-	  $if(posts)$
-            <div class="sidebar-module">
-              <h4>Últimos</h4>
-              $partial("templates/post-list.html")$
-            </div>
-          $endif$
-          <div class="sidebar-module">
-            <h4>Meus links</h4>
-            <ol class="list-unstyled">
-              <li><a href="https://github.com/lemol">GitHub</a></li>
-              <li><a href="https://twitter.com/lemolsoft">Twitter</a></li>
-              <li><a href="http://haskellers.com/user/3414">I'm a Haskeller!</a></li>
-            </ol>
-          </div>
-        </div><!-- /.blog-sidebar -->
-
-      </div><!-- /.row -->
-
-    </div><!-- /.container -->
-
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>Site proudly generated by
-         <a href="http://jaspervdj.be/hakyll">Hakyll</a>
-      </p>
-    </footer>
-
-
-    <!-- Bootstrap core JavaScript
+    <!-- Analytics
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/docs.min.js"></script>
-  </body>
+    <script>
+		// analytics code
+    </script>	
+	</body>
 </html>
