--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
                 <li>
                 <a href="$url$">
                     <span>$date$</span>
-                    <h3>$title</h3>
+                    <h3>$title$</h3>
                     <div>$abstract$</div>
                 </a>
                 </li>
