Trabalhando no design

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,10 +5,16 @@
             <section class="content">
             <h1>Páginas de Lemol-C</h1>
             </section>
-            <p>
-            A baixo vai a lista dos últimos posts publicados aqui no blog. 
-            Para saber mais sobre mim <a href="/about.html">clique aqui</a>.
-            </p>
+            <section class="home-hello">
+                <blockquote>
+                    <p>Olá, eu sou o <b>Leza Morais Lutonda</b>, e 
+                    a baixo vai a lista das últimas entradas no meu blog.</p>
+                    <p>Pode seguir-me no <a href="http://twitter.com/lemolsoft">twitter</a> 
+                    ou no <a href="http://github.com/lemol">github</a>, ou contactar-me 
+                    por <a href="mailto:lemol-c@hotmail.com">e-mail</a>.</p>
+                    <p>Para saber mais sobre mim <a href="/about.html">clique aqui</a>.</p>
+                </blockquote>
+            </section>
             <ul class="entries">
             $for(posts)$
                 <li>
