--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,15 +1,14 @@
 <div class="top-strip"></div>
-<div class="content">
-<main class="container">
-    <div class="row-fluid">
-            <section class="content">
-            <h1>Páginas de Lemol-C</h1>
-            </section>
-            <section class="content">
-            $body$
-            </section>
-    </div>
-    <hr>
+<main class="content">
+    <section class="container">
+        <div class="row-fluid">
+            <article class="post">
+            <h2 class="content">$title$</h2>
+                <section>
+                    $body$
+                    <hr>
+                </section>
+            </article>
+        </div>
+    </section>
 </main>
-</div>
-
