--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8"/>
-                <title>$title$ - Páginas de Lemol-C</title>
+                <title>$title$ >>= Páginas de Lemol-C</title>
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<link rel="author" href="/humans.txt">
-		<meta name="description" content="Description Goes Here">
+                <meta name="description" content="$abstract$">
 		<link rel="stylesheet" href="/css/style.css">
 		<link rel="stylesheet" href="/css/font-mfizz.css">
                 $if(hascode)$
