--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -120,7 +120,7 @@
                             <i class="icon-haskell"></i> 
                     </a>
                     ·
-                    <a href="mailto:lemol-c@hotmail.com" class="menu-contact">
+                    <a href="/contact.html" class="menu-contact">
                         <i class="icon-envelope"></i> 
                     </a>
                     ·
